force-app/main/default/objects/Condition_Field__c/Condition_Field__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Determines which fields to check in Object triggers.

(Nathan Schulz September 2022)</description>
    <label>Condition Field</label>
</CustomObject>