force-app/main/default/objects/Condition_Field__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>Action Type.

(Nathan Schulz September 2022)</description>
    <label>Action Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>