force-app/main/default/objects/Condition_Field__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>API Name of Object Field

(Nathan Schulz September 2022)</description>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>