force-app/main/default/objects/Condition_Field__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>Object Type.

(Nathan Schulz September 2022)</description>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>